--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.3",
+    "@types/koa__cors": "^2.2.3",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
